# GaussNewton

./: CMakeLists.txt  GaussNewton.cpp  README.md
.kdev4/: GaussNewton.kdev4
